--- a/Prog5.html
+++ b/Prog5.html
@@ -2,9 +2,9 @@
     <head>
         <script>
             var d=new Date();
-            var weekday=new Array('Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday');
+            var weekd=new Array('Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday');
             var month=new Array('Jan','Feb','Mar','April','May','June','July','Aug','Sept','Oct','Nov','Dec');
-            document.write(weekday[d.getDay()]+' ');
+            document.write(week[d.getDay()]+' ');
             document.write(d.getDate()+'.');
             document.write(month[d.getMonth()]+' ');
             document.write(d.getFullYear());
